# APEX

./: .dockerignore  .env.example  .gitignore  APEX-Nexus-Unified-Architecture-Detailed.md  CLAUDE.md  Makefile  README.md  compose.htb.yaml  compose.mock-vpn.yaml  compose.yaml  conftest.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
Knowledge/policy_db/: readme.md
apex_host/: async_utils.py  config.py  config_env.py  container_entrypoint.py  graph.py  graph_ids.py  graph_state.py  main.py  runtime.py  runtime_registry.py  types.py
apex_host/agents/: browser_executor.py  execute_executor.py  factory.py  ftp_executor.py  priv_esc_analysis_executor.py  priv_esc_enum_executor.py  recon_executor.py  repair_executor.py  ssh_executor.py  telnet_executor.py  user_flag_executor.py
apex_host/capabilities/: __init__.py  decisions.py  discovery.py  emission.py  evidence.py  lifecycle.py  providers.py  runtime_references.py  runtime_resolution.py
apex_host/eval/: benchmark.py  check_config.py  comparison.py  compose_smoke.py  evaluation.py  export_graph.py  findings.py  live_interlock.py  metrics.py  preflight.py  release_gate.py  report.py  report_invariants.py  run_htb_local.py  run_synthetic_machine.py  vpn_route_check.py
apex_host/execution/: __init__.py  context.py  diagnostics.py  dispatcher.py  dispositions.py  error_classifier.py  errors.py  registry.py
apex_host/knowledge/: __init__.py  compiled_loader.py  cve_patterns.py  init_cache.py  init_lock.py  init_state.py  manifest.py  payload_repo_loader.py  query_filters.py  seed_loader.py
apex_host/llm/: errors.py  gateway.py  prompts.py  router.py  types.py
apex_host/orchestration/: __init__.py  builder.py  capability_seed.py  completion.py  context_node.py  continuation_node.py  dependencies.py  diagnostics_node.py  dispatch_node.py  memory_node.py  models.py  outcome.py  parsing_node.py  planning_node.py  repair_node.py  routing.py  stall.py  terminal_episode.py
apex_host/parsers/: access_parser.py  banner_parser.py  browser_parser.py  capability_parser.py  command_parser.py  ffuf_parser.py  gobuster_parser.py  nmap_parser.py  objective_parser.py  priv_esc_parser.py  tech_detector.py
apex_host/planners/: access_capabilities.py  browser_planner.py  capabilities.py  credential_planner.py  experience_replay.py  global_planner.py  objective.py  objective_planner.py  priv_esc_opportunities.py  priv_esc_planner.py  recon_planner.py  web_opportunities.py  web_planner.py  workflow_orchestration.py
apex_host/planning/: __init__.py  budget.py  engine.py  fingerprint.py  models.py  prompt_builder.py  repair.py  validator.py
apex_host/policy/: __init__.py  advisor.py  llm_guard.py  models.py  policy_loader.py  rules.py
apex_host/security/: __init__.py  redaction.py
apex_host/tools/: backend.py  preflight.py  registry.py  remote_backend.py  runner.py  safety.py
apex_host/verification/: __init__.py  user_flag.py
apex_tool_service/: __init__.py  __main__.py  allowlist.py  app.py  audit.py  auth.py  executor.py  models.py  settings.py  validation.py
docker/apex/: Dockerfile
docker/kali/: Dockerfile  entrypoint.py
docker/vpn/: Dockerfile  connect_check.py  entrypoint.py  readiness_server.py  route_check.py  tunnel_status.py
docs/: action-fingerprint.md  apex-container.md  benchmarking.md  container-entrypoint.md  credential-validation.md  docker-compose.md  engagement-outcomes.md  environment-configuration.md  experience-replay.md  final_validation_report.md  first-live-test-runbook.md  github-actions.md  htb-vpn-container.md  htb-vpn-manual-validation.md  kali-container.md  kali-tool-service.md  knowledge-initialization.md  llm-providers.md  phase10_end_report.md  phase25-release-readiness.md  phase2_reopen_end_report.md  phase3_end_report.md  phase4_end_report.md  phase5_end_report.md  phase6_end_report.md  phase7_end_report.md  phase8_end_report.md  phase9_end_report.md  privilege-enumeration.md  privilege-escalation-planning.md  remediation_traceability_matrix.md  remediation_validation_baseline.md  remote-tool-backend.md  report-schema.md  reviewer_findings_audit.md  reviewer_remediation_report.md  tool-execution-architecture.md  user-flag-objective.md  web-planning.md  workflow-orchestration.md
examples/: smoke_run.py
memfabric/: __init__.py  api.py  config.py  ids.py  types.py
memfabric/coordination/: __init__.py  budget.py  conflict.py  graph_loop.py  graph_state.py  loop.py  protocols.py  scheduler.py
memfabric/reflector/: __init__.py  consolidate.py  gates.py  worker.py
memfabric/retrieval/: __init__.py  engine.py  fusion.py  gate.py  protocols.py
memfabric/stores/: __init__.py  episodic_jsonl.py  graph_networkx.py  kv_memory.py  lexical_bm25.py  protocols.py  vector_faiss.py
payloads/: sample.md
run_reports/: dry_ekg.json  dry_run.json  meow_ekg.json  meow_live.json
tests/: test_api.py  test_conflict.py  test_conflict_lifecycle.py  test_conflict_phase2.py  test_conflict_phase2_reopen.py  test_coordination.py  test_file_headers.py  test_final_verification.py  test_foundation.py  test_graph_atomicity.py  test_graph_loop.py  test_graph_phase1_extended.py  test_graph_stress.py  test_graph_transaction_complete.py  test_memory_api.py  test_reflector.py  test_reflector_bounded.py  test_reflector_domain_agnostic.py  test_retrieval.py  test_retrieval_phase4.py  test_skill_lifecycle.py  test_stores.py  test_transactional_merge.py  test_working_retrieval_freshness.py
tests/apex_host/: test_access_capability_refactor.py  test_access_parser_structured.py  test_access_validation.py  test_agent_factory.py  test_browser_executor.py  test_browser_parser.py  test_capabilities.py  test_check_config.py  test_compiled_loader.py  test_compilers_output.py  test_config_env.py  test_container_entrypoint.py  test_credential_phase_fix.py  test_credential_planner_multiprotocol.py  test_credential_validation_security.py  test_dispatcher_credential_protocols.py  test_duplicate_actions.py  test_eval_preflight.py  test_ftp_executor.py  test_graph.py  test_htb_local_runner.py  test_layout.py  (+57 more)
(+42 files in other folders)
