[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memfabric"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "faiss-cpu>=1.7",
    "networkx>=3.2",
    "langgraph>=0.2",
    "playwright>=1.40",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "types-networkx",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["memfabric", "apex_host"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["memfabric", "apex_host"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "faiss", "playwright.*", "langchain_core.*", "langchain_openai.*", "dotenv", "rank_bm25"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
