[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memfabric"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "faiss-cpu>=1.7",
    "networkx>=3.2",
    "langgraph>=0.2",
    "playwright>=1.40",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    # Phase 5 — native LLM provider adapters (apex_host/llm/providers/).
    # langchain-openai was REMOVED here: it is no longer imported anywhere
    # (apex_host/llm/router.py's OpenAIModelRouter previously built a
    # LangChain ChatOpenAI object; it now builds
    # apex_host.llm.providers.openai.OpenAIProvider directly against the
    # official openai SDK). openai>=1.0 was already present transitively
    # (via langchain-openai) but is now a direct, explicit dependency since
    # apex_host/llm/providers/openai.py and openrouter.py import it
    # directly. anthropic is a new direct dependency for
    # apex_host/llm/providers/anthropic.py's native Messages API adapter.
    "openai>=1.50",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    # Phase 12B — apex_host/agents/ssh_executor.py imports this directly for
    # bounded, one-attempt SSH credential validation. ftplib (stdlib) covers
    # FTP, so no equivalent third-party FTP dependency was needed. Paramiko
    # is the de facto standard, actively-maintained pure-Python SSH client
    # library — chosen over shelling out to the system `ssh` binary so the
    # executor can disable agent forwarding, local key discovery, and
    # keyboard-interactive fallback precisely and in-process (see
    # docs/credential-validation.md "SSH host-key behavior").
    "paramiko>=3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.6",
    "types-networkx",
    "types-PyYAML",
    "types-paramiko",
]

[tool.hatch.build.targets.wheel]
packages = ["memfabric", "apex_host", "apex_tool_service"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["memfabric", "apex_host", "apex_tool_service"]

[[tool.mypy.overrides]]
# openai and anthropic both ship inline type hints (py.typed) and are
# intentionally NOT listed here — mypy --strict type-checks against them
# directly once installed.
module = ["langgraph.*", "faiss", "playwright.*", "langchain_core.*", "dotenv", "rank_bm25"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
# Matches [project].requires-python; explicit rather than left to inference.
target-version = "py311"
# No path exclusions: ruff's default respect-gitignore=true already keeps the
# vendored, gitignored `Knowledge/` corpus (GTFOBins/LOLBAS/PayloadsAllTheThings/
# SecLists third-party sources, plus downloaded intel_db/methodology_db raw data)
# out of scope. Confirmed empirically — zero lint findings ever originated under
# `Knowledge/` — so no [tool.ruff] exclude entries were added. First-party code
# under apex_host/knowledge/ (the compiler/loader package, distinct from the
# root-level vendored `Knowledge/` data directory) remains fully linted.
# Default lint rule selection (E4, E7, E9, F) is unchanged — no rules disabled.
